--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,13 @@ body{
   color: var(--secondary);
 }
 .App{
- 
+  max-width: 1100px;
   margin: 0 auto;
-  background: linear-gradient(90deg,rgb(110,94,254) 0%, rgb(73,63,252,1)100%);
+  background: linear-gradient(90deg,rgb(110,94,254) 0%, rgba(238, 238, 243, 0.966)100%);
 }
 
 .title h2, .title p{
-  color: #fff;
+  color: rgb(5, 3, 3);
   text-align: center;
 }
 .title h2{
@@ -38,7 +38,7 @@ label input{
   opacity: 0;
 }
 label{
-  background-color: aqua;
+  background-color: rgb(190, 234, 234);
   display: block;
   width: 230px;
   height: 50px;
